syntax="proto3";
import "google/protobuf/empty.proto";

package technics;

message DriveSpeedRequest {
  double value = 1;
}

message SteerRequest {
  double speed = 1;
  double angle = 2;
}

message BatteryStatus {
  double voltage = 1;
  double current = 2;
}

message SteeringState {
  double angle = 1;
}

service DriveCommand {
  rpc DriveForward (DriveSpeedRequest) returns (google.protobuf.Empty);
  rpc DriveBackward (DriveSpeedRequest) returns (google.protobuf.Empty);
  rpc SteerLeft (SteerRequest) returns (google.protobuf.Empty);
  rpc SteerRight (SteerRequest) returns (google.protobuf.Empty);
}

service CarStatus {
  rpc GetBatteryInfo (google.protobuf.Empty) returns (BatteryStatus);
  rpc GetSteeringAngle (google.protobuf.Empty) returns (SteeringState);
}
